--- a/HTML/day_08/table.7.html
+++ b/HTML/day_08/table.7.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body align="center" topmargin="50px" >
-    <caption>Advanced HTML Tag for Table using thead,tbody & tfoot</caption>
-    <table border="1" cellpadding="15px" width="60%" align="center" cellspacing="0">
+    <caption><b>Advanced HTML Tag for Table using thead,tbody & tfoot</b></caption>
+    <table border ="1" bordercolor="blue" cellpadding="7px" width="40%" align="center" >
        <tr>
         <td colspan="3"><b>Purchase order:987654321</b></td>
         <td colspan="2"><b>Tutorialbrain - 10th october 2020</b></td>
